--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -127,9 +127,9 @@
 										<form action="home.html" id="sign-in"><!--Login form-->
 								            <div class="container form">
 								              <label><b>Tên đăng nhập:</b></label>
-								              <input type="text" id="uname" placeholder="Email hoặc số điện thoại" name="uname" required><span style="color:red" class="error1"></span>
+								              <input type="text" id="uname" placeholder="Email hoặc số điện thoại" name="uname" value="0868979193" required><span style="color:red" class="error1"></span>
 								              <label><b>Mật khẩu:</b></label>
-								              <input type="password" id="psw" placeholder="Mật khẩu đăng nhập" name="psw" required><span style="color:red" class="error2"></span>
+								              <input type="password" id="psw" placeholder="Mật khẩu đăng nhập" name="psw" value="02092008" required><span style="color:red" class="error2"></span>
 								              <button class="login" type="submit">Login</button></br>
 								              <input type="checkbox" checked="checked"> Remember me
 								            </div>
@@ -260,7 +260,7 @@
 							</div>
 							<ul class="face2">
 								<li class="f-icon"><i class="fa fa-facebook"></i></li>
-								<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
+								<li class="f-share left"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 								<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 								<div class="clear"></div>
 							</ul>
@@ -439,7 +439,7 @@
 							</div>
 							<ul class="face2">
 								<li class="f-icon"><i class="fa fa-facebook"></i></li>
-								<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
+								<li class="f-share left"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 								<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 								<div class="clear"></div>
 							</ul>
@@ -620,7 +620,7 @@
 							</div>
 							<ul class="face2">
 								<li class="f-icon"><i class="fa fa-facebook"></i></li>
-								<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
+								<li class="f-share left"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 								<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 								<div class="clear"></div>
 							</ul>
@@ -797,7 +797,7 @@
 							</div>
 							<ul class="face2">
 								<li class="f-icon"><i class="fa fa-facebook"></i></li>
-								<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
+								<li class="f-share left"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 								<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 								<div class="clear"></div>
 							</ul>
@@ -967,7 +967,7 @@
 							</div>
 							<ul class="face2">
 								<li class="f-icon"><i class="fa fa-facebook"></i></li>
-								<li class="f-share left"><a href="https://facebook.com" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
+								<li class="f-share left"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/" target="_blank"><img src="../IMG/f-share1.jpg"></a></li>
 								<li class="f-share right"><a href=""><img src="../IMG/f-share.png"></a></li>
 								<div class="clear"></div>
 							</ul>
@@ -1182,10 +1182,30 @@
 			</div>
 		</div>
 	</div>
-	
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
-		<div class="footer-content"></div>
+		<div class="footer-content">
+					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+						<img src="../IMG/logo-face.png">
+						<img src="../IMG/slogan.png">
+						<p style="display: inline-block;">Phát triển bởi <strong>Trịnh Công Trình</strong></p>
+					</div>
+					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+							<ul class="footer-nav">
+								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
+								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
+							</ul>
+							<div class="text-copyright">
+								<p>Chúng tôi luôn cố gắng đem lại những thông tin nhanh chóng và chính xác cho mọi người. Rất mong nhận được sự ủng hộ giúp đỡ của mọi người cùng nhau xây dựng một kênh thông tin truyền thông về nhà trọ tốt nhất Việt Nam.</p>
+								<p>MỌI CHI TIẾT XIN LIÊN HỆ:</p>
+								<p>Email: <strong>cskh.timphongcungban@gmail.com</strong><br>
+								</p>
+								<p>Zalo: <strong>0868 97 91 93</strong></p>
+								<p>Hỗ trợ đăng tin: <strong>0868 97 91 93</strong><br><p>
+							</div>
+					</div>
+					<div class="clear"></div>
+		</div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
