--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -94,9 +94,9 @@
 										<form action="home.html" id="sign-in"><!--Login form-->
 								            <div class="container form">
 								              <label><b>Tên đăng nhập:</b></label>
-								              <input type="text" id="uname" placeholder="Email hoặc số điện thoại" name="uname" required><span style="color:red" class="error1"></span>
+								              <input type="text" id="uname" placeholder="Email hoặc số điện thoại" name="uname" value="0868979193" required><span style="color:red" class="error1"></span>
 								              <label><b>Mật khẩu:</b></label>
-								              <input type="password" id="psw" placeholder="Mật khẩu đăng nhập" name="psw" required><span style="color:red" class="error2"></span>
+								              <input type="password" id="psw" placeholder="Mật khẩu đăng nhập" name="psw" value="02092008" required><span style="color:red" class="error2"></span>
 								              <button class="login" type="submit">Login</button></br>
 								              <input type="checkbox" checked="checked"> Remember me
 								            </div>
