--- a/Du_anTN/HTML/start-page.html
+++ b/Du_anTN/HTML/start-page.html
@@ -113,9 +113,8 @@
 			
 		</div>
 		<ul class="nav-bar">
-			<li class="ico home"><a href="home.html"><img src="../IMG/home.png"></a></li>
-			<li class="ico about"><img src="../IMG/about.png"></li>
-			<li class="ico face"><img src="../IMG/face.png"></li>
+			<li class="ico home"><a href="home.html"><img src="../IMG/home.png" title="Trang chủ"></a></li>
+			<li class="ico face"><a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/"><img src="../IMG/face.png" title="FanPage"></a></li>
 		</ul>
 		<div class="clear"></div>
 	</div>
