--- a/Du_anTN/HTML/help.html
+++ b/Du_anTN/HTML/help.html
@@ -180,7 +180,7 @@
 			<div class="wrap-content">
 				<div class="container-content" style="margin-top: 10px;">
 					<div class="help-form">
-					<p style="font-size: 20px; color: #00914E;">Cảm ơn bạn đã đồng hành cùng chúng tôi. Sự hài lòng của bạn là thành công lớn nhất của <i style="font-size: 22px; color: red;">timphongcungban.vn</i></p>
+					<p style="font-size: 20px; color: #00914E;">Cảm ơn bạn đã đồng hành cùng chúng tôi. Sự hài lòng của bạn là thành công lớn nhất của <i style="font-size: 22px; color: red;">timphongcungban.com</i></p>
 					<p>Khó khăn:</br>- Bạn đang loay hoay tìm phòng trọ. </br> - Bạn kinh doanh phòng trọ nhưng chưa hiệu quả...</br>
 					Giải pháp:</br>
 					- Đội ngũ công tác viên hùng hậu, nhiệt tình chúng tôi sẽ giúp bạn tìm được nơi ở phù hợp, nhanh chóng nhất.</br>
@@ -205,63 +205,59 @@
 			</div>
 		
 			<div class="side-bar">
-				<div class="search">
-						<div class="title-side">
-							TÌM PHÒNG
-						</div>
-						<div class="row">
-							<select class="select">
-								<option>Tỉnh, TP</option>
-								<option>Hà Nội</option>
-								<option>TP.HCM</option>
-							</select>
-							<select class="select">
-								<option>Quận, Huyện</option>
-								<option>Hai Bà Trưng</option>
-								<option>Thanh Xuân</option>
-								<option>Đống Đa</option>
-								<option>Cầu Giấy</option>
-								<option>Từ Liêm</option>
-							</select>
-							<select class="select">
-								<option>Gần ĐH, CĐ</option>
-								<option>Bách Khoa</option>
-								<option>Xây Dựng</option>
-								<option>Tài chính</option>
-								<option>Ngoại thương</option>
-							</select>
-							<select class="select">
-								<option>Bạn là?</option>
-								<option>Sinh viên</option>
-								<option>Người đi làm</option>
-								<option>Kinh doanh</option>
-							</select>
-						</div>
-						<div class="row">
-							<select class="select">
-								<option>Bạn cần tìm?</option>
-								<option>Thuê phòng trọ</option>
-								<option>Thuê nhà</option>
-								<option>Chung cư mini</option>
-								<option>Mặt bằng kinh doanh</option>
-							</select>
-							<select class="select">
-								<option>Diện tích?</option>
-								<option>Dưới 15m2</option>
-								<option>15m2 - 25m2</option>
-								<option>25m2 - 35m2</option>
-								<option>Trên 35m2</option>
-							</select>
-							<select class="select">
-								<option>Mức giá?</option>
-								<option>500 - 1000</option>
-								<option>1000 - 1500</option>
-								<option>1500 - 2000</option>
-								<option>2000 - 3000</option>
-								<option>Trên 3000</option>
-							</select>
-						</div>
-						<div class="icon-s"><i class="fa fa-search"></i><span>Tìm Kiếm</span></div>
+				<div class="search" id="menu-search">
+					<div class="title-side">
+						TÌM PHÒNG
+					</div>
+					<div class="row">
+						<select class="select locale-item">
+							<option>Tỉnh, TP</option>
+							<option>Hà Nội</option>
+							<option>Đà Nẵng</option>
+							<option>TP.Hồ Chí Minh</option>
+						</select>
+						<select class="select locale_district">
+							
+						</select>
+						<select class="select">
+							<option>Gần ĐH, CĐ</option>
+							<option>Bách Khoa</option>
+							<option>Xây Dựng</option>
+							<option>Tài chính</option>
+							<option>Ngoại thương</option>
+						</select>
+						<select class="select">
+							<option>Bạn là?</option>
+							<option>Sinh viên</option>
+							<option>Người đi làm</option>
+							<option>Kinh doanh</option>
+						</select>
+					</div>
+					<div class="row">
+						<select class="select loaihinh">
+							<option>Bạn cần tìm?</option>
+							<option>Thuê phòng trọ</option>
+							<option>Thuê nhà</option>
+							<option>Chung cư mini</option>
+							<option>Mặt bằng kinh doanh</option>
+						</select>
+						<select class="select">
+							<option>Diện tích?</option>
+							<option>Dưới 15m2</option>
+							<option>15m2 - 25m2</option>
+							<option>25m2 - 35m2</option>
+							<option>Trên 35m2</option>
+						</select>
+						<select class="select">
+							<option>Mức giá?</option>
+							<option>500 - 1000</option>
+							<option>1000 - 1500</option>
+							<option>1500 - 2000</option>
+							<option>2000 - 3000</option>
+							<option>Trên 3000</option>
+						</select>
+					</div>
+					<div class="icon-s"><i class="fa fa-search"></i><span>Tìm Kiếm</span></div>
 				</div>
 				
 			</div>
