--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -552,7 +552,7 @@
 				</div>
 				<!--Kết thúc phần nội dung-->
 				<div class="side-bar">
-					<div class="search">
+					<div class="search" id="menu-search">
 							<div class="title-side">
 								TÌM PHÒNG
 							</div>
@@ -561,15 +561,10 @@
 									<option>Tỉnh, TP</option>
 									<option>Hà Nội</option>
 									<option>Đà Nẵng</option>
-									<option>TP.HCM</option>
+									<option>TP.Hồ Chí Minh</option>
 								</select>
-								<select class="select">
-									<option>Quận, Huyện</option>
-									<option>Hai Bà Trưng</option>
-									<option>Thanh Xuân</option>
-									<option>Đống Đa</option>
-									<option>Cầu Giấy</option>
-									<option>Từ Liêm</option>
+								<select class="select locale_district">
+									
 								</select>
 								<select class="select">
 									<option>Gần ĐH, CĐ</option>
