--- a/Du_anTN/HTML/news.html
+++ b/Du_anTN/HTML/news.html
@@ -178,55 +178,49 @@
 			</div>
 			<div class="wrap-content">
 				<div class="container-content">
-					<div class="content" style="border: none;">
-					<div class="news-content">
-						<div class="image-new">
-							<img src="../IMG/new1.jpg">
-						</div>
-						<div class="new">
-							<div class="new-title">
-								<h4 data-toggle="collapse" data-target="#new-content-detail2"><b>Những điều tân sinh viên cần biết khi thuê phòng trọ</b></h4>
-								<div class="des-new">Đối với các bạn tân sinh viên mới chân ướt chân ráo lên thành phố, việc tìm nhà trọ luôn là một thách thức lớn, làm sao có thể tìm được chỗ ở tốt để yên tâm học tập với mức chi phí có thể chấp nhận được...</div>
-								<button class="btn-new" data-toggle="collapse" data-target="#new-content-detail2"><i>Xem chi tiết</i></button>
-							</div>
-						</div>
-						<div class="clear"></div>
-						<div class="collapse" id="new-content-detail2">
-							<h4>Đối với các bạn tân sinh viên mới chân ướt chân ráo lên thành phố, việc tìm nhà trọ luôn là một thách thức lớn, làm sao có thể tìm được chỗ ở tốt để yên tâm học tập với mức chi phí có thể chấp nhận được. Một số bạn có người thân quen hoặc anh chị hiện đang sinh sống ở thành phố đó thì việc tìm chỗ ở sẽ thuận lợi hơn đôi chút, còn lại phần đông các tân sinh viên phải “tự thân vận động” đi tìm phòng trong các khu nhà trọ sinh viên. Để giúp các Tân sinh viên giảm bớt khó khăn trong việc tìm nhà trọ, sau đây chúng tôi sẽ cung cấp cho các bạn một số kinh nghiệm thuê phòng trọ để sinh viên tìm được nơi ở trọ hợp ý, chất lượng và đảm bảo an ninh.</h4>
+					<div class="content" id="news" style="border: none;">
+					        <div class="col-md-4">
+					            <div class="thumbnail item">
+					                <a href="../HTML/new2.html">
+					                    <img class="img-responsive" src="../IMG/img-news/img2.jpg">
+					                    <p class="title">Những điều cần biết khi tìm phòng trọ</p>
+					                </a>
+					            </div>
+					        </div>
+					        <div class="col-md-4">
+					            <div class="thumbnail item">
+					                <a href="../HTML/new3.html">
+					                    <img class="img-responsive" src="../IMG/img-news/img3.jpg" alt="vi-sao-chon-nganh-hot-van-that-nghiep">
+					                    <p class="title">Vì sao chọn ngành 'hot' vẫn thất nghiệp?</p>
+					                </a>
+					            </div>
+					        </div>
+					        <div class="col-md-4">
+					            <div class="thumbnail item">
+					                <a href="../HTML/new4.html">
+					                    <img class="img-responsive" src="../IMG/img-news/img4-1.jpg" alt="sinh-vien-my-chon-nganh-hoc-the-nao">
+					                    <p class="title">Sinh viên Mỹ chọn ngành học thế nào?</p>
+					                </a>
+					            </div>
+					        </div>
+					        <div class="col-md-4">
+					            <div class="thumbnail item">
+					                <a href="../HTML/new5.html">
+					                    <img class="img-responsive" src="../IMG/img-news/img5-1.jpg" alt="sinh-vien-hao-hung-tham-gia-ngay-hoi-dinh-huong-nghe-nghiep">
+					                    <p class="title">Sinh viên hào hứng tham gia ngày hội Định hướng nghề nghiệp</p>
+					                </a>
+					            </div>
+					        </div>
+					        <div class="col-md-4">
+					            <div class="thumbnail item">
+					                <a href="../HTML/new1.html">
+					                    <img class="img-responsive" src="../IMG/img-news/img1.jpg" alt="y-tuong-kinh-doanh-nha-tro-ngoi-khong-moi-thang-kiem-tram-trieu">
+					                    <p class="title">Ý tưởng kinh doanh nhà trọ, ngồi không mỗi tháng kiếm trăm triệu?</p>
+					                </a>
+					            </div>
+					        </div>
+   					</div>
 						
-							<p><b>1. Cần xác định trước khu vực thuê và giá thuê</b></p>
-							<p>Điều đầu tiên các bạn cần làm trước khi bắt đầu công cuộc đi tìm phòng trọ, đó là xác định xem mình sẽ thuê nhà ở khu vực nào và mức giá tầm khoảng bao nhiêu.</br>
-							Về khu vực thuê, một lựa chọn tối ưu cho các bạn tân sinh viên đó là thuê gần trường, tốt nhất là trong vòng bán kính 1-2km xung quanh trường. Theo đó, các bạn sẽ tiết kiệm được thời gian, công sức và chi phí đi lại. Ví dụ, nếu bạn cách trường chừng 6-7km, bạn sẽ phải dậy thật sớm bắt 1 hoặc 2 tuyến xe buýt hoặc tự đi xe đến trường. Trong khi các bạn ở gần trường vừa tiết kiệm được cả tiếng đồng hồ đó để làm các việc khác vừa không phải chen chúc trên những chuyến xe buýt luôn “chật cứng” vào mỗi giờ cao điểm sáng – chiều. Hơn nữa với các bạn yêu thích hoạt động ngoại khóa, thích lên thư viện, thích học ở giảng đường, v.v. thì việc ở gần trường sẽ càng tạo điều kiện cho các bạn theo đuổi sở thích, đam mê của mình.</p>
-							<p><b>2. Tìm hiểu thông tin và xem xét thật kỹ phòng trọ bạn sắp thuê</b></p>
-							<p>Khi bạn có thông tin về một phòng trọ nào đó, bất kể từ nguồn nào: do người thân quen giới thiệu, từ các trung tâm trợ giúp của Đoàn Thanh niên trường, hay từ các tin rao vặt bất động sản hay cho thuê nhà trọ giá rẻ trên mạng, bạn nên hỏi trực tiếp người đã giới thiệu cho mình hoặc gọi điện trước theo số điện thoại được cung cấp để hỏi chủ nhà một số thông tin cần thiết. Giá phòng, giá điện nước, phí phát sinh, diện tích, loại phòng, số người được ở, quy định về giờ giấc là một số thông tin cần thiết bạn nên hỏi trước. Rất nhiều trường hợp khi đến xem phòng, chất lượng, không gian phòng ở rất tốt nhưng lại quy định về trước 9h tối và không được phép cho bạn bè đến chơi. Nếu bạn không tuân thủ được những quy định ngặt nghèo này, vậy là bạn đã lãng phí thời gian và công sức đến xem phòng.</p>
-						</div>
-					</div>
-
-
-					<div class="news-content">
-						<div class="image-new">
-							<img src="../IMG/buyt.jpg">
-						</div>
-						<div class="new">
-							<div class="new-title">
-								<h4 data-toggle="collapse" data-target="#new-content-detail"><b>Lộ trình các tuyến xe buýt</b></h4>
-								<div class="des-new">Tổng hợp lộ trình các tuyến xe buýt khu vực Hà Nội, Tp. Hồ chí Minh, Đà Nẵng</div>
-								<button class="btn-new" data-toggle="collapse" data-target="#new-content-detail"><i>Xem chi tiết</i></button>
-							</div>
-						</div>
-						<div class="clear"></div>
-						<div class="collapse" id="new-content-detail">
-							<h4>Sử dụng phương tiện giao thông công cộng để giảm ùn tắc giao thông....</h4>
-							<p>Để thuận tiện cho việc đi lại của các bạn hãy tìm hiểu lộ trình các tuyến xe buýt gần nơi bạn ở <i>(Truy cập theo các đường link dưới đây).</i></p>
-							<p>Xe buýt Hà Nội</p>
-							<a href="http://www.transerco.vn/default.aspx?pageid=253" target="_blank">http://www.transerco.vn</a>
-							<p>Xe buýt Tp. Hồ Chí Minh</p>
-							<a href="http://buyttphcm.com.vn/Route" target="_blank">http://buyttphcm.com.vn</a>
-							<p>Xe buýt Tp. Đà Nẵng</p>
-							<a href="http://ecobus.danang.gov.vn/web/guest/homepublish" target="_blank">http://ecobus.danang.gov.vn</a>
-						</div>
-					</div>
-					</div>	
 				</div>
 			</div>
 		
@@ -292,7 +286,42 @@
 	</div>
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
-		<div class="footer-content"></div>
+		<div class="footer-content">
+			<div class="wrapper-fcontent">
+					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+						<img src="../IMG/logo-face.png">
+						<img src="../IMG/slogan.png">
+					</div>
+					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+							<ul class="footer-nav">
+								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
+								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
+							</ul>
+							<div class="text-copyright">
+								<p>Trang web đăng tin chia sẻ miễn phí thông tin về phòng trọ cho thuê, nhà riêng cho thuê, văn phòng, mặt bằng kinh doanh...nhằm giúp người thuê phòng và người cho thuê phòng tương tác với nhau không qua trung gian môi giới.</p></br>
+								<p style="color: #2196F3;margin-bottom: 10px !important;">MỌI CHI TIẾT XIN LIÊN HỆ:</p>
+								<p>Email: <strong>timphongcungban@gmail.com</strong><br>
+								</p>
+								<p>Zalo: <strong>0868 97 91 93</strong></p>
+								<p>Hỗ trợ đăng tin: <strong>0868 97 91 93</strong><br><p>
+							</div>
+					</div>
+					<div class="footer-link">
+							<div class="row1">
+								<a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/"><img src="../IMG/face-icon.png" title="FacePage"></a>
+								<a href="https://plus.google.com/u/0/105034502578187630822"><img src="../IMG/google-icon.png" title="Google"></a>
+								<a href="https://chat.zalo.me/"><img src="../IMG/zalo-icon.png" title="Zalo"></a>
+							</div>
+							<div class="row2">
+								<img src="../IMG/img-footer.png">
+							</div>
+					</div>
+					<div class="clear"></div>
+					<div class="bot-footer">
+						<p>© Copyright 2017 Timphongcungban.com. All rights reserved.</p>
+					</div>
+			</div>
+		</div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
