--- a/Du_anTN/HTML/post2.html
+++ b/Du_anTN/HTML/post2.html
@@ -75,8 +75,8 @@
 							<li class="item"><a href="help.html"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="search-nearby.html" target="_blank"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
-							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
+							<li class="item"><a href="../HTML/support.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							
 							<div class="sign">
@@ -189,7 +189,7 @@
 							      <label for="tieude">Tiêu đề tin:</label>
 							      <input type="email" class="form-control" id="tieude" placeholder="Hãy đặt tiêu đề đầy đủ, ý nghĩa khách hàng sẽ quan tâm hơn">
 							    </div>
-							    <!form-row 1>
+							    <!--form-row 1-->
 								<div class="form-inline">
 								  <div class="form-group">
 								    <label for="type">Loại hình cho thuê:</label></br>
@@ -206,7 +206,7 @@
 								    <input type="text" class="form-control" id="mobile">
 								  </div>
 								</div>
-								<!form-row 2>
+								<!--form-row 2-->
 								<div class="form-inline">
 								  <div class="form-group">
 								    <label for="price">Giá cho thuê:</label></br>
@@ -220,7 +220,7 @@
 									</select>
 								  </div>
 								</div>
-								<!form-row 3>
+								<!--form-row 3-->
 								<h4>Giá dịch vụ cơ bản:</h4>
 								<div class="form-inline">
 								  <div class="form-group">
@@ -258,10 +258,7 @@
 								  <div class="form-group">
 								    <label for="district">Quận/Huyện</label></br>
 								    <select class="form-control" id="district">
-								    	<option>Quận/Huyện</option>
-								    	<option>Hoàn Kiếm</option>
-										<option>Đống Đa</option>
-										<option>Thanh Xuân</option>
+								    	
 									</select>
 								  </div>
 								  <div class="form-group">
@@ -382,10 +379,23 @@
 					<div class="title-side">
 						TIN TỨC
 					</div>
-					<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
-					<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
-					<div class="new-item">Chung cư mini mới xây gồm 200 phòng toàn bộ nội thất trong phòng được thiết kế bằng gỗ rất mát mẻ, sang trọng. Chính thức đưa tòa nhà vào hoạt…</div>
-					</div>
+					<div class="new-item">
+							<div class="news-img"><a href="../HTML/new2.html"><img src="../IMG/img-news/img2.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new2.html">Những điều cần biết khi tìm phòng trọ…</a></div>
+							<div class="clear"></div>
+						</div>
+						<div class="new-item">
+							<div class="news-img"><a href="../HTML/new1.html"><img src="../IMG/img-news/img1.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new1.html">Ý tưởng kinh doanh nhà trọ, ngồi không mỗi tháng kiếm trăm triệu?</a></div>
+							<div class="clear"></div>
+						</div>
+						<div class="new-item">
+							<div class="news-img"><a href="../HTML/new3.html"><img src="../IMG/img-news/img3.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new3.html">Vì sao chọn ngành 'hot' vẫn thất nghiệp?</a></div>
+							<div class="clear"></div>
+						</div>
+						<div class="icon-s"><i class="fa fa-external-link-square"></i> &nbsp;<span>Xem Thêm</span></div>
+						<div class="clear"></div>
 				</div>
 			</div>
 			<div class="clear"></div>	
@@ -393,7 +403,42 @@
 	</div>
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
-		<div class="footer-content"></div>
+		<div class="footer-content">
+			<div class="wrapper-fcontent">
+					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+						<img src="../IMG/logo-face.png">
+						<img src="../IMG/slogan.png">
+					</div>
+					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+							<ul class="footer-nav">
+								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
+								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
+							</ul>
+							<div class="text-copyright">
+								<p>Trang web đăng tin chia sẻ miễn phí thông tin về phòng trọ cho thuê, nhà riêng cho thuê, văn phòng, mặt bằng kinh doanh...nhằm giúp người thuê phòng và người cho thuê phòng tương tác với nhau không qua trung gian môi giới.</p></br>
+								<p style="color: #2196F3;margin-bottom: 10px !important;">MỌI CHI TIẾT XIN LIÊN HỆ:</p>
+								<p>Email: <strong>timphongcungban@gmail.com</strong><br>
+								</p>
+								<p>Zalo: <strong>0868 97 91 93</strong></p>
+								<p>Hỗ trợ đăng tin: <strong>0868 97 91 93</strong><br><p>
+							</div>
+					</div>
+					<div class="footer-link">
+							<div class="row1">
+								<a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/"><img src="../IMG/face-icon.png" title="FacePage"></a>
+								<a href="https://plus.google.com/u/0/105034502578187630822"><img src="../IMG/google-icon.png" title="Google"></a>
+								<a href="https://chat.zalo.me/"><img src="../IMG/zalo-icon.png" title="Zalo"></a>
+							</div>
+							<div class="row2">
+								<img src="../IMG/img-footer.png">
+							</div>
+					</div>
+					<div class="clear"></div>
+					<div class="bot-footer">
+						<p>© Copyright 2017 Timphongcungban.com. All rights reserved.</p>
+					</div>
+			</div>
+		</div>
 	</div>
 	<!--Script Load file-->
 	<script type="text/javascript">	
