--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -383,15 +383,15 @@
 												</div>
 											</div>
 										</div>
-									    <div id="menu4" class="tab-pane fade" style="position: relative;">
-										    <div id="detail-item4" class="des-detail-content">
-												<div id="googleMap1" style="width:100%;height:400px;"></div>
-												<div id="right-panel">
-												  <h2>CĐ, ĐH gần nhất</h2>
-												  <ul id="places"></ul>
-												</div>
+								    <div id="menu4" class="tab-pane fade" style="position: relative;">
+									    <div id="detail-item4" class="des-detail-content">
+											<div id="googleMap1" style="width:100%;height:400px;"></div>
+											<div id="right-panel">
+											  <h2>CĐ, ĐH gần nhất</h2>
+											  <ul id="places"></ul>
 											</div>
-									    </div>
+										</div>
+									</div>
 									</div>	    
 								</div>
 						</div>
@@ -1161,20 +1161,22 @@
 							TIN TỨC
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/new1.jpg"></div>
-							<div class="news-detail">Những điều tân sinh viên cần biết khi thuê phòng trọ…</div>
+							<div class="news-img"><a href="../HTML/new2.html"><img src="../IMG/img-news/img2.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new2.html">Những điều cần biết khi tìm phòng trọ…</a></div>
 							<div class="clear"></div>
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/buyt.jpg"></div>
-							<div class="news-detail">Tổng hợp lộ trình các tuyến xe buýt khu vực Hà Nội, Tp. Hồ chí Minh, Đà Nẵng…</div>
+							<div class="news-img"><a href="../HTML/new1.html"><img src="../IMG/img-news/img1.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new1.html">Ý tưởng kinh doanh nhà trọ, ngồi không mỗi tháng kiếm trăm triệu?</a></div>
 							<div class="clear"></div>
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/new1.jpg"></div>
-							<div class="news-detail">Những điều tân sinh viên cần biết khi thuê phòng trọ…</div>
+							<div class="news-img"><a href="../HTML/new3.html"><img src="../IMG/img-news/img3.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new3.html">Vì sao chọn ngành 'hot' vẫn thất nghiệp?</a></div>
 							<div class="clear"></div>
 						</div>
+						<div class="icon-s"><i class="fa fa-external-link-square"></i> &nbsp;<span>Xem Thêm</span></div>
+						<div class="clear"></div>
 					</div>
 				</div>
 				
@@ -1186,11 +1188,11 @@
 		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content">
 			<div class="wrapper-fcontent">
-					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+					<div id="f-content1">
 						<img src="../IMG/logo-face.png">
 						<img src="../IMG/slogan.png">
 					</div>
-					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+					<div id="f-content2">
 							<ul class="footer-nav">
 								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
 								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
@@ -1223,7 +1225,7 @@
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
-	<script src="../JAVASCRIPT/home.js"></script>
-	<script src="../../bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../JAVASCRIPT/home.js"></script>
+	<script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
