--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -611,20 +611,22 @@
 							TIN TỨC
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/new1.jpg"></div>
-							<div class="news-detail">Những điều tân sinh viên cần biết khi thuê phòng trọ…</div>
+							<div class="news-img"><a href="../HTML/new2.html"><img src="../IMG/img-news/img2.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new2.html">Những điều cần biết khi tìm phòng trọ…</a></div>
 							<div class="clear"></div>
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/buyt.jpg"></div>
-							<div class="news-detail">Tổng hợp lộ trình các tuyến xe buýt khu vực Hà Nội, Tp. Hồ chí Minh, Đà Nẵng…</div>
+							<div class="news-img"><a href="../HTML/new1.html"><img src="../IMG/img-news/img1.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new1.html">Ý tưởng kinh doanh nhà trọ, ngồi không mỗi tháng kiếm trăm triệu?</a></div>
 							<div class="clear"></div>
 						</div>
 						<div class="new-item">
-							<div class="news-img"><img src="../IMG/new1.jpg"></div>
-							<div class="news-detail">Những điều tân sinh viên cần biết khi thuê phòng trọ…</div>
+							<div class="news-img"><a href="../HTML/new3.html"><img src="../IMG/img-news/img3.jpg"></a></div>
+							<div class="news-detail"><a href="../HTML/new3.html">Vì sao chọn ngành 'hot' vẫn thất nghiệp?</a></div>
 							<div class="clear"></div>
 						</div>
+						<div class="icon-s"><i class="fa fa-external-link-square"></i> &nbsp;<span>Xem Thêm</span></div>
+						<div class="clear"></div>
 					</div>
 				</div>
 				
@@ -634,7 +636,42 @@
 	</div>
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
-		<div class="footer-content"></div>
+		<div class="footer-content">
+			<div class="wrapper-fcontent">
+					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+						<img src="../IMG/logo-face.png">
+						<img src="../IMG/slogan.png">
+					</div>
+					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+							<ul class="footer-nav">
+								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
+								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
+							</ul>
+							<div class="text-copyright">
+								<p>Trang web đăng tin chia sẻ miễn phí thông tin về phòng trọ cho thuê, nhà riêng cho thuê, văn phòng, mặt bằng kinh doanh...nhằm giúp người thuê phòng và người cho thuê phòng tương tác với nhau không qua trung gian môi giới.</p></br>
+								<p style="color: #2196F3;margin-bottom: 10px !important;">MỌI CHI TIẾT XIN LIÊN HỆ:</p>
+								<p>Email: <strong>timphongcungban@gmail.com</strong><br>
+								</p>
+								<p>Zalo: <strong>0868 97 91 93</strong></p>
+								<p>Hỗ trợ đăng tin: <strong>0868 97 91 93</strong><br><p>
+							</div>
+					</div>
+					<div class="footer-link">
+							<div class="row1">
+								<a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/"><img src="../IMG/face-icon.png" title="FacePage"></a>
+								<a href="https://plus.google.com/u/0/105034502578187630822"><img src="../IMG/google-icon.png" title="Google"></a>
+								<a href="https://chat.zalo.me/"><img src="../IMG/zalo-icon.png" title="Zalo"></a>
+							</div>
+							<div class="row2">
+								<img src="../IMG/img-footer.png">
+							</div>
+					</div>
+					<div class="clear"></div>
+					<div class="bot-footer">
+						<p>© Copyright 2017 Timphongcungban.com. All rights reserved.</p>
+					</div>
+			</div>
+		</div>
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&callback=myMap"></script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
