--- a/Du_anTN/HTML/support.html
+++ b/Du_anTN/HTML/support.html
@@ -76,7 +76,7 @@
 							<li class="item"><a href="search-nearby.html" target="_blank"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							
 							<div class="sign">
@@ -179,6 +179,11 @@
 			</div>
 			<div class="wrap-content">
 				<div class="container-content">
+					<!--Form thông báo-->
+					<div class="alert alert-danger alert-dismissable fade in" style="display: none">
+						<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+						<strong>Bạn cần đăng nhập để sử dụng chức năng này!</strong>
+					</div>
 					<div class="wrapper">
 						<!-- Nav tabs -->
 						<ul class="nav nav-tabs tab" role="tablist">
@@ -278,7 +283,42 @@
 	</div>
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
-		<div class="footer-content"></div>
+		<div class="footer-content">
+			<div class="wrapper-fcontent">
+					<div class="col-md-3 col-sm-12 col-xs-12" id="f-content1">
+						<img src="../IMG/logo-face.png">
+						<img src="../IMG/slogan.png">
+					</div>
+					<div class="col-md-5 col-sm-12 col-xs-12" id="f-content2">
+							<ul class="footer-nav">
+								<li class="item"><a href="../HTML/about_us.html">Giới thiệu</a></li>
+								<li class="item"><a href="../HTML/quydinh.html">Quy định sử dụng</a></li>
+							</ul>
+							<div class="text-copyright">
+								<p>Trang web đăng tin chia sẻ miễn phí thông tin về phòng trọ cho thuê, nhà riêng cho thuê, văn phòng, mặt bằng kinh doanh...nhằm giúp người thuê phòng và người cho thuê phòng tương tác với nhau không qua trung gian môi giới.</p></br>
+								<p style="color: #2196F3;margin-bottom: 10px !important;">MỌI CHI TIẾT XIN LIÊN HỆ:</p>
+								<p>Email: <strong>timphongcungban@gmail.com</strong><br>
+								</p>
+								<p>Zalo: <strong>0868 97 91 93</strong></p>
+								<p>Hỗ trợ đăng tin: <strong>0868 97 91 93</strong><br><p>
+							</div>
+					</div>
+					<div class="footer-link">
+							<div class="row1">
+								<a href="https://www.facebook.com/Timphongcungbancom-1064749426960008/"><img src="../IMG/face-icon.png" title="FacePage"></a>
+								<a href="https://plus.google.com/u/0/105034502578187630822"><img src="../IMG/google-icon.png" title="Google"></a>
+								<a href="https://chat.zalo.me/"><img src="../IMG/zalo-icon.png" title="Zalo"></a>
+							</div>
+							<div class="row2">
+								<img src="../IMG/img-footer.png">
+							</div>
+					</div>
+					<div class="clear"></div>
+					<div class="bot-footer">
+						<p>© Copyright 2017 Timphongcungban.com. All rights reserved.</p>
+					</div>
+			</div>
+		</div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
