--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -317,7 +317,7 @@
 											        <th>Loại hình cho thuê</th>
 											        <td>Chung cư mini</td>
 											        <th>Ngày cập nhật</th>
-											        <td>20/08/2017</td>
+											        <td>20/05/2017</td>
 											      </tr>
 											      <tr>
 											        <th>Người đăng</th>
@@ -498,7 +498,7 @@
 											        <th>Loại hình cho thuê</th>
 											        <td>Chung cư mini</td>
 											        <th>Ngày cập nhật</th>
-											        <td>20/08/2017</td>
+											        <td>20/05/2017</td>
 											      </tr>
 											      <tr>
 											        <th>Người đăng</th>
@@ -635,7 +635,7 @@
 								</div>
 								<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
 								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 20/05/2017</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
@@ -679,7 +679,7 @@
 											        <th>Loại hình cho thuê</th>
 											        <td>Chung cư mini</td>
 											        <th>Ngày cập nhật</th>
-											        <td>20/08/2017</td>
+											        <td>15/05/2017</td>
 											      </tr>
 											      <tr>
 											        <th>Người đăng</th>
@@ -812,7 +812,7 @@
 								</div>
 								<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
 								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 13/05/2017</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
@@ -854,7 +854,7 @@
 											        <th>Loại hình cho thuê</th>
 											        <td>Chung cư mini</td>
 											        <th>Ngày cập nhật</th>
-											        <td>20/08/2017</td>
+											        <td>20/05/2017</td>
 											      </tr>
 											      <tr>
 											        <th>Người đăng</th>
@@ -982,7 +982,7 @@
 								</div>
 								<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
 								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 11/05/2016</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
@@ -1099,6 +1099,16 @@
 						</div>
 						<div class="clear"></div>
 					</div>
+					<div class="text-center">
+						<ul class="pagination">
+					    <li class="active"><a href="#">1</a></li>
+					    <li ><a href="#">2</a></li>
+					    <li><a href="#">3</a></li>
+					    <li><a href="#">4</a></li>
+					    <li><a href="#">5</a></li>
+					    <li><a href="#">...</a></li>
+			  		</ul>
+			  	</div>
 				</div>
 				<!--Kết thúc phần nội dung-->
 				<div class="side-bar">
@@ -1179,7 +1189,6 @@
 						<div class="clear"></div>
 					</div>
 				</div>
-				
 				<div class="clear"></div>	
 			</div>
 		</div>
