--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -10,6 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap-theme.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:url" content="https://congtrinh0209.github.io/Du_anTN/HTML/home.html" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Trang tìm kiếm phòng trọ nhanh chóng, hiệu quả cho mọi đối tượng "/>
+	<meta property="og:description" content="Trang tìm kiếm phòng trọ nhanh chóng, hiệu quả cho mọi đối tượng " />
+	<meta property="og:image" content="https://congtrinh0209.github.io/Du_anTN/IMG/123.jpg" />
 </head>
 <body>
 	<div class="back-top"><a href="#view"><img src="../IMG/back-top.png" title="Về đầu trang"></a></div>
@@ -1101,14 +1106,14 @@
 					</div>
 					<div class="text-center">
 						<ul class="pagination">
-					    <li class="active"><a href="#">1</a></li>
-					    <li ><a href="#">2</a></li>
-					    <li><a href="#">3</a></li>
-					    <li><a href="#">4</a></li>
-					    <li><a href="#">5</a></li>
-					    <li><a href="#">...</a></li>
-			  		</ul>
-			  	</div>
+						    <li class="active"><a href="#">1</a></li>
+						    <li ><a href="#">2</a></li>
+						    <li><a href="#">3</a></li>
+						    <li><a href="#">4</a></li>
+						    <li><a href="#">5</a></li>
+						    <li><a href="#">...</a></li>
+			  			</ul>
+			  		</div>
 				</div>
 				<!--Kết thúc phần nội dung-->
 				<div class="side-bar">
@@ -1193,6 +1198,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content">
@@ -1232,6 +1238,15 @@
 			</div>
 		</div>
 	</div>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9&appId=1772123429767126";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
 	<script type="text/javascript" src="../JAVASCRIPT/home.js"></script>
