--- a/Project2/HTML/chiatrang.html
+++ b/Project2/HTML/chiatrang.html
@@ -32,7 +32,7 @@
 			<div id="content">
 				<div>
 					<label><b>Số ảnh/trang:</b></label>
-					<input id="ipp" onchange="chiatrang()" type="text" placeholder="Nhập số ảnh" name="img" required value="5">
+					<input id="ipp" onchange="pagination()" type="text" placeholder="Nhập số ảnh" name="img" required value="4">
 				</div>
 				<div id="xega">
 					<h1>XE GA YAMAHA</h1>
@@ -48,9 +48,9 @@
 				</div>
 			</div>
 			<div class="text-center">
-					<ul class="pagination">   
-		  			</ul>
-		  		</div>
+				<ul class="pagination">   
+	  			</ul>
+	  		</div>
 			<div id="footer">
 				<p>ĐẠI LÝ ỦY QUYỀN PHÂN PHỐI XE YAMAHA CÔNG TRÌNH</br>
 				ĐỊA CHỈ: 99 TRẦN HƯNG ĐẠO - TP. NAM ĐỊNH</br>
